--- a/blankPage.html
+++ b/blankPage.html
@@ -117,20 +117,19 @@ function menuFunction() {
 
 <div class="w3-row-padding">
   <div class="w3-third w3-black">
-    <h2>title 1</h2>
-    <p>content 1</p>
+    <h2>third title 1</h2>
+    <p>third content 1</p>
   </div>
 
   <div class="w3-third w3-black">
-    <h2>title 2</h2>
-    <p>content 2</p>
+    <h2>third title 2</h2>
+    <p>third content 2</p>
   </div>
 
   <div class="w3-third w3-black">
-    <h2>title 3</h2>
-    <p>content 3</p>
+    <h2>third title 3</h2>
+    <p>third content 3</p>
   </div>
-
 </div>
 
 
@@ -147,6 +146,37 @@ function menuFunction() {
 <div class="w3-container w3-black">
   <h1>full width title</h1>
   <p>Full width content</p>
+</div>
+
+
+<div class="w3-row-padding">
+  <div class="w3-half w3-black">
+    <h2>half title 1</h2>
+    <p>half content 1</p>
+  </div>
+
+  <div class="w3-half w3-black">
+    <h2>half title 2</h2>
+    <p>half content 2</p>
+  </div>
+</div>
+
+
+<div class="w3-row-padding">
+  <div class="w3-third w3-black">
+    <h2>third title 1</h2>
+    <p>third content 1</p>
+  </div>
+
+  <div class="w3-third w3-black">
+    <h2>third title 2</h2>
+    <p>third content 2</p>
+  </div>
+
+  <div class="w3-third w3-black">
+    <h2>third title 3</h2>
+    <p>third content 3</p>
+  </div>
 </div>
 
 
