--- a/music.html
+++ b/music.html
@@ -135,7 +135,7 @@ function menuFunction() {
   <div id="musicYoung" class="w3-third w3-black">
 <a href="media/002_-_AndyBGoode_-_You_Make_Me_Feel_So_Young.mp3" download><img class="w3-image w3-image-abg w3-round" src="images/demoyoung.jpg" alt="You Make Me Feel So Young"></a>
 <audio controls><source src="media/002_-_AndyBGoode_-_You_Make_Me_Feel_So_Young.mp3" type="audio/mpeg">Your browser does not support playing audio</audio>
-    <h3>YOU MAKE ME FEEL SO YOUNG</h3>
+    <h3>You Make Me Feel So Young</h3>
     <p>One of my favourite Frank Sinatra classic crooning hits. From 1956 it really sums up the joyful feeling of a new relationship. You feel that can do anything.<br/>
 "Running across the meadows, picking up lots of forget-me-nots"<br/>
 <a href="media/002_-_AndyBGoode_-_You_Make_Me_Feel_So_Young.mp3" download>DOWNLOAD MP3: You Make Me Feel So Young</a></p>
@@ -144,7 +144,7 @@ function menuFunction() {
   <div id="musicPoetry" class="w3-third w3-black">
 <a href="media/005_-_AndyBGoode_-_Poetry_in_Motion.mp3" download><img class="w3-image w3-image-abg w3-round" src="images/demopoetry.jpg" alt="Poetry in Motion"></a>
 <audio controls><source src="media/005_-_AndyBGoode_-_Poetry_in_Motion.mp3" type="audio/mpeg">Your browser does not support playing audio</audio>
-    <h3>POETRY IN MOTION</h3>
+    <h3>Poetry In Motion</h3>
     <p>What do you call a chicken crossing the road.... Poultry in motion!<br/>
 "She doesn't need improvement, She's much too nice to rearrange".<br/>
 A hit in 1960 by Johnny Tillotson this conjures up images lovely girls moving beautifully with fluid grace steps.<br/>
@@ -154,7 +154,7 @@ A hit in 1960 by Johnny Tillotson this conjures up images lovely girls moving be
   <div id="musicLetThereBeLove" class="w3-third w3-black">
 <a href="media/001_-_AndyBGoode_-_Let_There_Be_Love.mp3" download><img class="w3-image w3-image-abg w3-round" src="images/demolettherebelove.jpg" alt="Let There Be Love"></a>
 <audio controls><source src="media/001_-_AndyBGoode_-_Let_There_Be_Love.mp3" type="audio/mpeg">Your browser does not support playing audio</audio>
-    <h3>LET THERE BE LOVE</h3>
+    <h3>Let There Be Love</h3>
     <p>Originally from the 1940s and covered by many talented singers. My favourite is Nat King Cole's 1961 hit. His vocal tone just can't be matched.<br/>
 What a romantic song for lovers on a date night.<br/>
 "Someone to bless me, whenever I sneeze". Being there for the little things.<br/>
@@ -168,7 +168,7 @@ What a romantic song for lovers on a date night.<br/>
   <div id="musicJohnny" class="w3-third w3-black">
 <a href="media/001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download><img class="w3-image w3-image-abg w3-round" src="images/demojohnnybgoodeart.jpg" alt="Johnny B Goode"></a>
 <audio controls><source src="media/001_-_AndyBGoode_-_Johnny_B_Goode.mp3" type="audio/mpeg">Your browser does not support playing audio</audio>
-    <h3>JOHNNY B. GOODE</h3>
+    <h3>Johnny B. Goode</h3>
     <p>Originally by the fantastic Chuck Berry in 1958, Johnny B Goode has taken its place as a Rock n Roll anthem.<br/>
 Its high energy all the way with vocals and guitar solos alternating taking the lead.<br/>
 My cover of this aims to capture the feeling of that original.<br/>
@@ -178,7 +178,7 @@ My cover of this aims to capture the feeling of that original.<br/>
   <div id="musicEarth" class="w3-third w3-black">
 <a href="media/003_-_AndyBGoode_-_Earth_Angel.mp3" download><img class="w3-image w3-image-abg w3-round" src="images/demoearthangelart.jpg" alt="Earth Angel"></a>
 <audio controls><source src="media/003_-_AndyBGoode_-_Earth_Angel.mp3" type="audio/mpeg">Your browser does not support playing audio</audio>
-    <h3>EARTH ANGEL</h3>
+    <h3>Earth Angel</h3>
     <p>Also called 'Earth Angel (Will You Be Mine)', the penguins sang this smooth love song to great acclaim in 1954. It was also featured in the movie 'Back To The Future' while Marty was 'fading away'. What a classic!<br/>
 I find performing this song passionately very enjoyable.<br/>
 <a href="media/003_-_AndyBGoode_-_Earth_Angel.mp3" download>DOWNLOAD MP3: Earth Angel</a></p>
@@ -203,7 +203,7 @@ Any song that helps you spell can't be bad.<br/>
   <div id="musicApple" class="w3-third w3-black">
 <a href="media/001_-_TheJaysVintage_-_Dont_Sit_Under_The_Apple_Tree.mp3" download><img class="w3-image w3-image-abg w3-round" src="images/demoappletreeart.jpg" alt="Dont Sit Under The Apple Tree"></a>
 <audio controls><source src="media/001_-_TheJaysVintage_-_Dont_Sit_Under_The_Apple_Tree.mp3" type="audio/mpeg">Your browser does not support playing audio</audio>
-    <h3>DONT SIT UNDER THE APPLE TREE</h3>
+    <h3>Dont Sit Under The Apple Tree</h3>
     <p>Popularised by Glenn Miller and sung by the lovely Andrew Sisters in 1942, Don't Sit Under the Apple Tree (With Anyone Else But Me) has taken its place as a war time classic.<br/>
 Its top-tapping energy all the way with beautiful harmonies all the way.<br/>
 'The Jays Vintage' cover of this, aims to capture the feeling of that original.<br/>
