--- a/photos.html
+++ b/photos.html
@@ -523,12 +523,12 @@ function menuFunction() {
 
 <!-- photo controls -->
 <DIV id='controls'>
-<DIV id='buttonPlay' onClick="buttonStartSlideshow()">[PLAY]</DIV>
-<DIV id='buttonPause' onClick="buttonPauseSlideshow()">[PAUSE]</DIV>
+<DIV id='buttonPlay' onClick="buttonStartSlideshow()">Play</DIV>
+<DIV id='buttonPause' onClick="buttonPauseSlideshow()">Pause</DIV>
 <DIV id='buttonPrevious' onClick="buttonPrevPhoto()">&#60;</DIV>
 <DIV id='buttonNext' onClick="buttonNextPhoto()">&#62;</DIV>
-<DIV id='buttonClose' onClick="buttonClosePhoto()">[CLOSE]</DIV>
-<DIV id='buttonDownload' onClick="buttonDownloadPhoto()"><a href="photos/andybgoode0002-highres.jpg" download>[DOWNLOAD]</a></DIV>
+<DIV id='buttonClose' onClick="buttonClosePhoto()">X</DIV>
+<DIV id='buttonDownload' onClick="buttonDownloadPhoto()"><a href="photos/andybgoode0002-highres.jpg" download>Save</a></DIV>
 </DIV>  
 <!-- photo page display area -->
 <DIV id='photosArea'>
@@ -548,7 +548,7 @@ function menuFunction() {
 <div class="w3-container w3-black">
   <h1>Contacts</h1> 
   
-  <div id="contact" class="w3-third w3-black">
+  <div id="contact" class="w3-half w3-black">
     <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1950s/60s Rock and Roll Entertainer">
 	<h2>Contact Me</h2>
 <ul id="contactList">
