--- a/reviews.html
+++ b/reviews.html
@@ -299,7 +299,7 @@ If you have any comments, please do contact me.</p>
 <div class="w3-container w3-black">
   <h1>Contacts</h1> 
   
-  <div id="contact" class="w3-third w3-black">
+  <div id="contact" class="w3-half w3-black">
     <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1950s/60s Rock and Roll Entertainer">
 	<h2>Contact Me</h2>
 <ul id="contactList">
