--- a/songlist.html
+++ b/songlist.html
@@ -121,12 +121,12 @@ Hear some on my <a href="videos.html">videos</a> page, do go and have a listen.<
 <img class="w3-image w3-image-abg w3-round" src="photos/andybgoode0004-thumb.jpg" alt="Vintage Rock and Roll Singer">
     <h2>Rock and Roll / Jive / Rockabilly</h2>
     <p>
-Chuck Berry: <a href="videos.html#videoJohnnyBGoode">Johnny B. Goode</a>; Rock and Roll Music<br/>
-Bill Haley and His Comets: Rock Around the Clock; Shake, Rattle and Roll; See You Later Alligator<br/>
-Elvis: Blue Suede Shoes; Hound Dog; All Shook Up; Jailhouse Rock; Can't Help Falling in Love<br/>
+Chuck Berry: <a href="videos.html#videoJohnnyBGoode">Johnny B. Goode</a>, Rock and Roll Music<br/>
+Bill Haley and His Comets: Rock Around the Clock, Shake, Rattle and Roll, See You Later Alligator<br/>
+Elvis: Blue Suede Shoes, Hound Dog, All Shook Up, Jailhouse Rock, Can't Help Falling in Love<br/>
 Eddie Cochran: C'mon Everybody<br/>
 Danny and The Juniors: Rock And Roll Is Here To Stay, At the Hop<br/>
-The Everly Brothers: Wake up Little Susie; Bye, Bye Love<br/>
+The Everly Brothers: Wake up Little Susie, Bye, Bye Love<br/>
 Thurston Harris: Little Bitty Pretty One<br/>
 Jerry Lee Lewis: Great Balls of Fire<br/>
 Chubby Checker: Let's Twist Again<br/>
@@ -139,9 +139,9 @@ Little Anthony and The Imperials: Tears on my Pillow<br/>
 Johnny Tillotson: <a href="music.html#musicPoetry">Poetry in Motion</a><br/>
 Cliff Richard: Living Doll, Move It, Congratulations<br/>
 Chris Montez: Let's Dance<br/>
-Roy Orbison: Ooby Dooby; Oh, Pretty Woman<br/>
+Roy Orbison: Ooby Dooby, Oh, Pretty Woman<br/>
 Fats Domino: I'm Walking<br/>
-Shakin' Stevens: Green Door; This Ole House<br/>
+Shakin' Stevens: Green Door, This Ole House<br/>
 The Platters: Harbour Lights<br/>
 </p>
   </div>
@@ -150,11 +150,11 @@ The Platters: Harbour Lights<br/>
 <img class="w3-image w3-image-abg w3-round" src="photos/andybgoode0037-thumb.jpg" alt="Christmas Singer">
     <h2>Xmas Classics</h2>
     <p>
-Michael Bublé: <a href="videos.html#videoChristmasPlaylist">Holly Jolly Christmas</a>; <a href="videos.html#videoChristmasPlaylist">Frosty The Snowman</a><br/>
+Michael Bublé: <a href="videos.html#videoChristmasPlaylist">Holly Jolly Christmas</a>, <a href="videos.html#videoChristmasPlaylist">Frosty The Snowman</a><br/>
 Michael Bublé and Puppini Sisters: <a href="videos.html#videoChristmasPlaylist">Jingle Bells</a><br/>
 Perry Como: It’s Beginning To Look A Lot Like Christmas<br/>
 Dean Martin: Let it Snow, Let it Snow, Let it Snow<br/>
-Bing Crosby: Santa Claus is Comin’ to Town; <a href="videos.html#videoChristmasPlaylist">White Christmas</a><br/>
+Bing Crosby: Santa Claus is Comin’ to Town, <a href="videos.html#videoChristmasPlaylist">White Christmas</a><br/>
 Frank Sinatra: I’ll Be Home for Christmas, <a href="videos.html#videoChristmasPlaylist">Rudolph the Red-Nosed Reindeer</a><br/>
 Dickie Valentine: Christmas Alphabet<br/>
 Nat King Cole: <a href="videos.html#videoChristmasPlaylist">The Christmas Song</a><br/>
@@ -193,16 +193,35 @@ Vera Lynn: The White Cliffs of Dover, We'll Meet Again<br/>
 <img class="w3-image w3-image-abg w3-round" src="photos/andybgoode0035-thumb.jpg" alt="Rat Pack / Swing Singer">
     <h2>Rat Pack / Crooner / Swing Hits</h2>
     <p>
-Frank Sinatra: New York, New York; <a href="videos.html#videoFlyMe">Fly Me To The Moon<a/>; Cheek To Cheek; Come Fly With Me; <a href="videos.html#videoYouMakeMeYoung">You Make Me Feel So Young</a>; I've Got You Under My Skin; The Lady Is a Tramp; Love and Marriage<br/>
-Bing Crosby: Pennies from Heaven; All I Do Is Dream of You<br/>
-Bobby Darin: Mack the Knife; Beyond the Sea; Things<br/>
-Dean Martin: Sway; Memories Are Made Of This, <a href="videos.html#videoHowDoYouLike">How D'Ya Like Your Eggs in the Morning<a/>, It Don't Mean A Thing<br/>
-Nat King Cole: <a href="music.html#musicLove">L-O-V-E</a>, <a href="music.html#musicLetThereBeLove">Let There Be Love</a>; When I Fall in Love<br/>
-Michael Bublé: All of Me; You've Got A Friend In Me<br/>
+Frank Sinatra: New York, New York, <a href="videos.html#videoFlyMe">Fly Me To The Moon<a/>, Cheek To Cheek, Come Fly With Me, <a href="videos.html#videoYouMakeMeYoung">You Make Me Feel So Young</a>, I've Got You Under My Skin, The Lady Is a Tramp, Love and Marriage<br/>
+Bing Crosby: Pennies from Heaven, All I Do Is Dream of You<br/>
+Bobby Darin: Mack the Knife, Beyond the Sea, Things<br/>
+Dean Martin: Sway, Memories Are Made Of This, <a href="videos.html#videoHowDoYouLike">How D'Ya Like Your Eggs in the Morning<a/>, It Don't Mean A Thing<br/>
+Nat King Cole: <a href="music.html#musicLove">L-O-V-E</a>, <a href="music.html#musicLetThereBeLove">Let There Be Love</a>, When I Fall in Love<br/>
+Michael Bublé: All of Me, You've Got A Friend In Me<br/>
 </p>
   </div>
 </div>
 
+
+<div class="w3-row-padding">
+  <div class="w3-half w3-black">
+<img class="w3-image w3-image-abg w3-round" src="photos/andybgoode0010-thumb.jpg" alt="1970s Singer">
+    <h2>1970's Smashes</h2>
+    <p>
+Barry Manilow: Copacabana<br/>
+Blue Swede: Blue Hooked on a Feeling<br/>
+Tony Christie: Is this the Way to Amarillo<br/>
+Norman Greenbaum: Spirit in the Sky<br/>
+Elvis: Burning Love<br/>
+Tony Orlando and Dawn : Tie a Yellow Ribbon<br/>
+Neil Diamond: Sweet Caroline<br/>
+Queen: Crazy Little Thing Called Love<br/>
+Frank Sinatra: New York, New York<br/>
+</p>
+  </div>
+
+</div>
 
 
 
