--- a/songlist.html
+++ b/songlist.html
@@ -193,10 +193,10 @@ Vera Lynn: The White Cliffs of Dover, We'll Meet Again<br/>
 <img class="w3-image w3-image-abg w3-round" src="photos/andybgoode0035-thumb.jpg" alt="Rat Pack / Swing Singer">
     <h2>Rat Pack / Crooner / Swing Hits</h2>
     <p>
-Frank Sinatra: New York, New York, <a href="videos.html#videoFlyMe">Fly Me To The Moon<a/>, Cheek To Cheek, Come Fly With Me, <a href="videos.html#videoYouMakeMeYoung">You Make Me Feel So Young</a>, I've Got You Under My Skin, The Lady Is a Tramp, Love and Marriage<br/>
+Frank Sinatra: New York, New York, <a href="videos.html#videoFlyMe">Fly Me To The Moon</a>, Cheek To Cheek, Come Fly With Me, <a href="videos.html#videoYouMakeMeYoung">You Make Me Feel So Young</a>, I've Got You Under My Skin, The Lady Is a Tramp, Love and Marriage<br/>
 Bing Crosby: Pennies from Heaven, All I Do Is Dream of You<br/>
 Bobby Darin: Mack the Knife, Beyond the Sea, Things<br/>
-Dean Martin: Sway, Memories Are Made Of This, <a href="videos.html#videoHowDoYouLike">How D'Ya Like Your Eggs in the Morning<a/>, It Don't Mean A Thing<br/>
+Dean Martin: Sway, Memories Are Made Of This, <a href="videos.html#videoHowDoYouLike">How D'Ya Like Your Eggs in the Morning</a>, It Don't Mean A Thing<br/>
 Nat King Cole: <a href="music.html#musicLove">L-O-V-E</a>, <a href="music.html#musicLetThereBeLove">Let There Be Love</a>, When I Fall in Love<br/>
 Michael Bublé: All of Me, You've Got A Friend In Me<br/>
 </p>
